; ModuleID = '/home/carl/AnghaBench/xhyve/src/extr_pci_e82545.c_e82545_tx_start.c'
source_filename = "/home/carl/AnghaBench/xhyve/src/extr_pci_e82545.c_e82545_tx_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.e82545_softc = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.e82545_softc*)* @e82545_tx_start to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @e82545_tx_start(%struct.e82545_softc* %0) #0 {
  %2 = alloca %struct.e82545_softc*, align 8
  store %struct.e82545_softc* %0, %struct.e82545_softc** %2, align 8
  %3 = load %struct.e82545_softc*, %struct.e82545_softc** %2, align 8
  %4 = getelementptr inbounds %struct.e82545_softc, %struct.e82545_softc* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = icmp eq i64 %5, 0
  br i1 %6, label %7, label %11

7:                                                ; preds = %1
  %8 = load %struct.e82545_softc*, %struct.e82545_softc** %2, align 8
  %9 = getelementptr inbounds %struct.e82545_softc, %struct.e82545_softc* %8, i32 0, i32 1
  %10 = call i32 @pthread_cond_signal(i32* %9)
  br label %11

11:                                               ; preds = %7, %1
  ret void
}

declare dso_local i32 @pthread_cond_signal(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
